@@ -7,6 +7,7 @@ mClassBrowser.py    Add option to control if show the docstring in class browser
                     rename OutlookBrowser.py to OutlineBrowser.py
 meide.py            Update to latest version
 PrefDialog.py       Improve pref dialog creation, and support custom meide control.
+FindInFiles.py      Change Find in Files dialog to panel
                     
 [2007/09/09]
 pyflakes SyntaxCheck.py
